Styling complete and first version of webpage is complete.

--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tribute Page to Ada Lovelace</title>
+    <link rel="stylesheet" href="./index.css">
 </head>
 
 <body>
     <main id="main">
         <h1 id="title">Ada Lovelace</h1>
-        <p>The first programmer!</p>
+        <p id="description">The first programmer!</p>
         <figure>
             <img src="./Assets/Ada_Lovelace.jpg" alt="An image of Ada Lovelace">
             <figcaption id="img-caption">
@@ -20,6 +21,7 @@
         </figure>
 
         <section id="tribute-info">
+            <h3 id="headline">Here are some interesting facts about Ms.Lovelace's life:</h3>
             <ul>
                 <li>Augusta Ada King, Countess of Lovelace was born in December 1815.</li>
                 <li>Ada Lovelace was the first computer programmer!!!</li>
@@ -32,7 +34,8 @@
                     but there is no evidence that she advanced the design or theory of it in any way</li>
                 <li>
                     The digital token ADA was named after Ada Lovelace.
-                    <img src="./Assets/Ada_Cardano.jpg" alt="A depiction of Ada Lovelace with Cardano token">
+                    <img id="Cardada" src="./Assets/Ada_Cardano.jpg"
+                        alt="A depiction of Ada Lovelace with Cardano token">
                 </li>
             </ul>
         </section>
